# PriComp

./: CMakeLists.txt  README.md  arith_demo.cpp  f_condition_demo.cpp  millionair.cpp  pricomp_doxygen.cfg  sp_demo.cpp  stat_demo.cpp
ML/: CMakeLists.txt  demo_knn.cpp  test_secure_kmeans.cpp  test_secure_nb.cpp  train_secure_kmeans.cpp  train_secure_nb.cpp
ML/ml_protocol/: CMakeLists.txt  kernel.cpp  kernel.h  kmeans.cpp  kmeans.h  knn.cpp  knn.h  ml_util.cpp  ml_util.h  nb.cpp  nb.h  predict.cpp  predict.h  secure_ml.cpp  secure_ml.h
commodity/: CMakeLists.txt  commodity.c  commodity.h  genCommodityRandomBits.c  genOfflineRandomBits.c
conf/: localrun_example.cfg  multiserver_example.cfg
dataset/: iris.alice  iris.bob  iris.test  iris_cluster.alice  iris_cluster.bob  iris_cluster.test
modules/: FindGMP.cmake
src/: CMakeLists.txt  communicate.cpp  communicate.h  debug_util.cpp  debug_util.h  smc.h  time_eval.cpp  time_eval.h  util.cpp  util.h
src/two_parties/: CMakeLists.txt  cSFloat.cpp  cSFloat.h  client.cpp  sp_init.h  tables.cpp  tables.h  two_parties.h
src/two_parties/protocol/: s_fixnum.cpp  s_fixnum.h  s_float.cpp  s_float.h  s_matrix.cpp  s_matrix.h  s_stats.cpp  s_stats.h
